# py-filesize

./: README.md  pyproject.toml
src/philiprehberger_filesize/: __init__.py
tests/: test_filesize.py
