[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-filesize"
version = "0.1.0"
description = "Convert bytes to human-readable file sizes and back"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["filesize", "bytes", "human-readable", "format", "size"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-filesize"
Repository = "https://github.com/philiprehberger/py-filesize"
Issues = "https://github.com/philiprehberger/py-filesize/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_filesize"]
